# wasm0-circuits

./: .gitignore  .gitmodules  Cargo.toml  Makefile  rust-toolchain
bus-mapping/: 0x000000000000000000000000000000000CAfe111.wasm  0x000000000000000000000000000000000CafE555.wasm  0x000000000000000000000000000000000caFE222.wasm  Cargo.toml  build.rs
bus-mapping/src/: circuit_input_builder.rs  exec_trace.rs  lib.rs  operation.rs  util.rs  wasm.rs
circuit-benchmarks/src/: copy_circuit.rs  evm_circuit.rs  exp_circuit.rs
eth-types/: Cargo.toml
eth-types/src/: bytecode.rs  error.rs  lib.rs
external-tracer/src/: lib.rs
gadgets/src/: binary_number.rs  util.rs
geth-utils/: .gitignore  Cargo.toml  build.rs  go.mod  go.sum
geth-utils/gethutil/: asm.go  trace.go  util.go
geth-utils/lib/: lib.go
geth-utils/src/: lib.rs
golang_utils/: Cargo.toml
golang_utils/src/: lib.rs
integration-tests/src/: integration_test_circuits.rs  lib.rs
mock/src/: block.rs  lib.rs  test_ctx.rs  transaction.rs
testool/src/: utils.rs
wasm-tracer/: Cargo.toml
wasm-tracer/src/: lib.rs  wasmer.rs
wasm-tracer/src/runtime/: host.rs
zkevm-circuits/: .gitignore  0x000000000000000000000000000000000CAfe111.wasm  Cargo.toml  Makefile  build.rs
zkevm-circuits/instr_unroll_circuit/: Cargo.toml
zkevm-circuits/instr_unroll_circuit/src/: chip.rs  lib.rs  tests.rs
zkevm-circuits/src/: copy_circuit.rs  delph_circuit.rs  evm_circuit.rs  exp_circuit.rs  leb128_circuit.rs  lib.rs  pi_circuit.rs  state_circuit.rs  stats.rs  super_circuit.rs  table.rs  test_util.rs  wasm_circuit.rs  (+1 more)
(+641 files in other folders)
