[package]
name = "wasm-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bus-mapping = { path = "../bus-mapping" }
downcast-rs = "1.2.0"
eth-types = { path = "../eth-types" }
nano-leb128 = "0.1.0"
specs = { path = "../delphinus-zkwasm/specs" }
wasmi = { path = "../delphinus-zkwasm/wasmi" }
wasmparser-nostd = "0.99.0"
