[package]
name = "instr_unroll_circuit"
version = "0.0.0"
edition = "2021"

[dependencies]
rand_core = { version = "0.6", default-features = false }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves.git', tag = "0.3.1" }
gadgets = { path = '../../gadgets' }
eth-types = { path = "../../eth-types" }
circuits = { package = "zkevm-circuits", path = "../../zkevm-circuits" }
macro_rules_attribute = "0.1.3"

[dev-dependencies]
memoize = "0.4.0"
